--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Pls write your first name to recieve your own message here:
          (It should start with a capital letter) :</p>
     <input type="text" id="nameInput">
-    <button onclick="greetUser()">Soumettre</button>
+    <button onclick="greetUser()">ok</button>
     <p id="greetingMessage"></p>
     <script src="scss.js"></script>
 </body>
